--- a/templates/about.html
+++ b/templates/about.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home</title>
-</head>
-<body>
-    <h1>About Page</h1>
-</body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+    <h1>Hey!</h1>
+{% endblock content%}
